# mestring

./: .env-example  .gitignore  LICENSE.md  README.md  TODO.md  compose.yml  package-lock.json  personvern.md  skills-lock.json
backend/: .env-example  Dockerfile  pyproject.toml  settings.py  urls.py
backend/app/: models.py
backend/import/: db_dump.py  fetch_feide_groups.py  fetch_feide_users.py  import_fetched_groups_to_db.py  import_fetched_users_to_db.py  import_from_excel.py  import_from_feide.py  maintenance.py
backend/import/data/: data_for_import.xlsx
backend/mastery/: auth.py  authentication.py  constants.py  imports.py  middleware.py  models.py  policies.py  querysets.py  schema_hooks.py  serializers.py  urls.py  views.py
backend/mastery/access_policies/: __init__.py  base.py  data_maintenance_task.py  feide_import.py  goal.py  group.py  mastery_schema.py  observation.py  role.py  school.py  situation.py  status.py  status_category.py  subject.py  user.py  user_group.py  user_school.py
backend/mastery/api/: __init__.py  api_functions.py  auth.py  custom.py  views.py
backend/mastery/data_import/: cleaner_bot.py  estimate_import.py  feide_api.py  fetch_groups.py  fetch_memberships.py  helpers.py  import_from_excel.py  import_groups.py  import_school.py  import_users.py  run_background_tasks.py  task_tracker.py
backend/mastery/imports/: __init__.py  __main__.py  background_task_handler.py  cli.py  feide_api.py  group_importer.py  helpers.py  school_importer.py  task_tracker.py  user_importer.py
backend/mastery/migrations/: 0001_initial.py  0002_alter_group_feide_id_alter_school_feide_id_and_more.py  0002_alter_observation_options_alter_goal_title.py  0002_goal_sort_order.py  0002_observation_observed_at.py  0002_rename_feide_id_subject_code_and_more.py  0002_school_is_goal_title_enabled.py  0003_alter_subject_group_code.py  0003_alter_user_groups_datamaintenancetask.py  0003_masteryschema_alter_goal_id_alter_group_id_and_more.py  0003_masteryschema_is_default.py  0003_observation_is_private.py  0003_user_is_superadmin.py  0004_alter_user_groups_alter_user_schools.py  0004_remove_goal_mastery_schema_goal_mastery_schema_id.py  0004_remove_status_goals_remove_status_group_goal_subject_and_more.py  0004_rename_maintened_by_school_subject_used_by_school.py  0005_alter_user_schools.py  0005_goal_created_by_goal_maintained_at_goal_updated_by_and_more.py  0005_rename_used_by_school_subject_owned_by_school.py  0006_alter_subject_owned_by_school.py  0006_goal_is_relevant.py  0006_rename_mastery_schema_id_goal_mastery_schema.py  0007_alter_goal_subject_alter_group_subject.py  0007_datamaintenancetask_marked_for_deletion_at_and_more.py  0007_rename_schema_masteryschema_config.py  0008_rename_is_private_observation_is_visible_to_student.py  0008_rename_marked_for_deletion_at_datamaintenancetask_deleted_at_and_more.py  0009_alter_goal_group_alter_goal_mastery_schema_and_more.py  0010_alter_user_schools_datamaintenancetask.py  0010_goal_school_alter_group_school_alter_group_subject_and_more.py  0011_fix_goal_school_references.py  0011_rename_target_id_datamaintenancetask_display_name_and_more.py  0012_datamaintenancetask_attempts.py  0012_fix_mastery_schema_school_references.py  0013_alter_goal_school_alter_masteryschema_school.py  0013_datamaintenancetask_earliest_run_at.py  0014_remove_datamaintenancetask_claimed_by_and_more.py  0014_remove_status_estimated_at_status_begin_at_and_more.py  0015_alter_datamaintenancetask_earliest_run_at.py  (+12 more)
backend/mastery/tests/: _test_settings.py  conftest.py  settings_in_memory.py  test_api.py  test_custom_api.py  test_group_permissions.py  test_groups.py  test_permissions_goal.py  test_permissions_group.py  test_permissions_mastery_schema.py  test_permissions_observation.py  test_permissions_role.py  test_permissions_school.py  test_permissions_subject.py  test_permissions_user.py  test_relations.py
backend/scripts/: groups.json  import_from_excel.py  import_from_feide.py
docs/: index.html  (+5 more)
(+200 files in other folders)
